force-app/main/default/objects/License__c/License__c.object-meta.xml
<CustomObject>
    <description>Stores license information. Includes identifiers, credential details, verification, and employer information.</description>
    <label>License</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>