force-app/main/default/objects/License__c/fields/Board_Custom_Status__c.field-meta.xml
<CustomField>
    <fullName>Board_Custom_Status__c</fullName>
    <formula>Profession__r.Use_Custom_Statuses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Uses Custom Status</label>
    <type>Checkbox</type>
</CustomField>