force-app/main/default/objects/License__c/fields/Board_ID__c.field-meta.xml
<CustomField>
    <fullName>Board_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board ID</label>
    <referenceTo>Profession__c</referenceTo>
    <relationshipLabel>Licenses (Board ID)</relationshipLabel>
    <relationshipName>Licenses1</relationshipName>
    <type>Lookup</type>
</CustomField>