force-app/main/default/objects/License__c/fields/Board_Name__c.field-meta.xml
<CustomField>
    <fullName>Board_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board Name</label>
    <referenceTo>Profession__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>