force-app/main/default/objects/License__c/fields/Board_Prof_Complex__c.field-meta.xml
<CustomField>
    <fullName>Board_Prof_Complex__c</fullName>
    <formula>TEXT(Profession__r.Complexity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board/Prof Complexity</label>
    <type>Text</type>
</CustomField>