force-app/main/default/objects/License__c/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <description>Candidate identifier tied to the license.</description>
    <label>Candidate ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>