force-app/main/default/objects/License__c/fields/Certification_State__c.field-meta.xml
<CustomField>
    <fullName>Certification_State__c</fullName>
    <formula>TEXT(Profession__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification State</label>
    <type>Text</type>
</CustomField>