force-app/main/default/objects/License__c/fields/Charge_Only_Evercheck__c.field-meta.xml
<CustomField>
    <fullName>Charge_Only_Evercheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to charge Evercheck fee but not the board.</description>
    <label>Charge Evercheck Fee But Not Board</label>
    <type>Checkbox</type>
</CustomField>