force-app/main/default/objects/License__c/fields/Credential_ID__c.field-meta.xml
<CustomField>
    <fullName>Credential_ID__c</fullName>
    <description>Credential identifier tied to the license.</description>
    <label>Credential ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>