force-app/main/default/objects/License__c/fields/Disciplinary_Action__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks disciplinary action</description>
    <label>Disciplinary Action</label>
    <type>Checkbox</type>
</CustomField>