force-app/main/default/objects/License__c/fields/Do_Not_Charge__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to prevent charging fees.</description>
    <label>Do Not Charge</label>
    <type>Checkbox</type>
</CustomField>