force-app/main/default/objects/License__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>Employee identifier on external system</description>
    <label>Employee ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>