force-app/main/default/objects/License__c/fields/Employer_ID__c.field-meta.xml
<CustomField>
    <fullName>Employer_ID__c</fullName>
    <description>Employer identifier.</description>
    <label>Employer ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>