force-app/main/default/objects/License__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>Employer name.</description>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>