force-app/main/default/objects/License__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Credential holder’s first name.</description>
    <label>Credential First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>