force-app/main/default/objects/License__c/fields/FK__c.field-meta.xml
<CustomField>
    <fullName>FK__c</fullName>
    <description>Foreign key reference from external system.</description>
    <externalId>true</externalId>
    <label>FK</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>