force-app/main/default/objects/License__c/fields/Found__c.field-meta.xml
<CustomField>
    <fullName>Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the license was found.</description>
    <label>Found</label>
    <type>Checkbox</type>
</CustomField>