force-app/main/default/objects/License__c/fields/IdEmployeeLic__c.field-meta.xml
<CustomField>
    <fullName>IdEmployeeLic__c</fullName>
    <description>External employee license identifier.</description>
    <label>Id Employee Lic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>