force-app/main/default/objects/License__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Credential holder’s last name</description>
    <label>Credential Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>