force-app/main/default/objects/License__c/fields/LastUpdatedByPropId__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedByPropId__c</fullName>
    <formula>LastModifiedBy.PropelusId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastUpdatedByPropId__c</label>
    <type>Text</type>
</CustomField>