force-app/main/default/objects/License__c/fields/LastUpdateName_c__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateName_c__c</fullName>
    <formula>LastModifiedBy.FirstName &amp; &quot; &quot; &amp; LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastUpdateName__c</label>
    <type>Text</type>
</CustomField>