force-app/main/default/objects/License__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>License number.</description>
    <label>License Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>