force-app/main/default/objects/License__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Status</label>
    <referenceTo>Status_Label__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>