force-app/main/default/objects/License__c/fields/Licensee_DOB__c.field-meta.xml
<CustomField>
    <fullName>Licensee_DOB__c</fullName>
    <description>Date of birth on the license.</description>
    <label>Licensee DOB</label>
    <type>Date</type>
</CustomField>