force-app/main/default/objects/License__c/fields/Licensee_SSN_4__c.field-meta.xml
<CustomField>
    <fullName>Licensee_SSN_4__c</fullName>
    <label>Licensee SSN 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>