force-app/main/default/objects/License__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Credential holder’s middle name.</description>
    <label>Credential Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>