force-app/main/default/objects/License__c/fields/MV_Guide__c.field-meta.xml
<CustomField>
    <fullName>MV_Guide__c</fullName>
    <formula>Profession__r.MV_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MV Guide</label>
    <type>Text</type>
</CustomField>