force-app/main/default/objects/License__c/fields/MV_Source__c.field-meta.xml
<CustomField>
    <fullName>MV_Source__c</fullName>
    <label>MV Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MV1.0</fullName>
            </value>
            <value>
                <fullName>MV2.0</fullName>
            </value>
            <value>
                <fullName>DataSolutions</fullName>
            </value>
            <value>
                <fullName>CEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>