force-app/main/default/objects/License__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>