force-app/main/default/objects/License__c/fields/NPA_Online_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>NPA_Online_Contact_Id__c</fullName>
    <description>Custom field that is required to verify certifications issued by the National Phelbotomy Association</description>
    <label>NPA Online Contact Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>