force-app/main/default/objects/License__c/fields/NPA_Verification_PIN__c.field-meta.xml
<CustomField>
    <fullName>NPA_Verification_PIN__c</fullName>
    <description>Custom field that is required to verify certifications issued by the National Phelbotomy Association</description>
    <label>NPA Verification PIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>