force-app/main/default/objects/License__c/fields/OriginDB__c.field-meta.xml
<CustomField>
    <fullName>OriginDB__c</fullName>
    <label>Origin DB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MONGO</fullName>
            </value>
            <value>
                <fullName>ORACLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>