force-app/main/default/objects/License__c/fields/OriginId__c.field-meta.xml
<CustomField>
    <fullName>OriginId__c</fullName>
    <description>Identifier from external system.</description>
    <label>Origin ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>