force-app/main/default/objects/License__c/fields/Other_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Other_License_Status__c</fullName>
    <label>Other License Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>