force-app/main/default/objects/License__c/fields/Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Name__c</fullName>
    <description>Existing Customer Data from LCR File</description>
    <label>Owner First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>