force-app/main/default/objects/License__c/fields/Owner_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Number_Id__c</fullName>
    <description>Existing Customer Data from LCR File</description>
    <label>Owner Number Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>