force-app/main/default/objects/License__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if record has been processed.</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>