force-app/main/default/objects/License__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profession</label>
    <referenceTo>Profession__c</referenceTo>
    <relationshipLabel>Licenses (Profession)</relationshipLabel>
    <relationshipName>Licenses2</relationshipName>
    <type>Lookup</type>
</CustomField>