force-app/main/default/objects/License__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CANDIDATE</fullName>
            </value>
            <value>
                <fullName>EMPLOYEE</fullName>
            </value>
            <value>
                <fullName>LV-PUBLIC-API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>