force-app/main/default/objects/License__c/fields/Ver_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Ver_First_Name__c</fullName>
    <label>Ver First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>