force-app/main/default/objects/License__c/fields/Ver_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Ver_Last_Name__c</fullName>
    <description>Looked up from Website, prepopulate via flow if Credential Last Name is available</description>
    <label>Ver Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>