force-app/main/default/objects/License__c/fields/Ver_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Ver_Middle_Name__c</fullName>
    <description>Looked up from Website, prepopulate via flow if Credential Middle Name is available</description>
    <label>Ver Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>