force-app/main/default/objects/License__c/fields/Verification_Fee__c.field-meta.xml
<CustomField>
    <fullName>Verification_Fee__c</fullName>
    <formula>Profession__r.Verification_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>