force-app/main/default/objects/License__c/fields/Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>Verification_Type__c</fullName>
    <label>Verification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REACTIVATED - MANUAL</fullName>
            </value>
            <value>
                <fullName>INTERRUPTED</fullName>
            </value>
            <value>
                <fullName>INITIAL</fullName>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
            </value>
            <value>
                <fullName>RENEWAL</fullName>
            </value>
            <value>
                <fullName>REACTIVATED - INTERRUPTED</fullName>
            </value>
            <value>
                <fullName>BLANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>