force-app/main/default/objects/License__c/fields/Verification_Website__c.field-meta.xml
<CustomField>
    <fullName>Verification_Website__c</fullName>
    <formula>Profession__r.Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification Website</label>
    <type>Text</type>
</CustomField>